[project]
name = "libWiiPy"
version = "0.2.0"
authors = [
    { name="NinjaCheetah", email="ninjacheetah@ncxprogramming.com" },
    { name="Lillian Skinner", email="lillian@randommeaninglesscharacters.com" }
]
description = "A Wii-related library for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NinjaCheetah/libWiiPy"
Issues = "https://github.com/NinjaCheetah/libWiipy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
