[project]
name = "libWiiPy"
version = "0.4.1"
authors = [
    { name="NinjaCheetah", email="ninjacheetah@ncxprogramming.com" },
    { name="Lillian Skinner", email="lillian@randommeaninglesscharacters.com" }
]
description = "A modern Python library for handling files used by the Wii"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pycryptodome",
    "requests"
]

[project.urls]
Homepage = "https://github.com/NinjaCheetah/libWiiPy"
Issues = "https://github.com/NinjaCheetah/libWiiPy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
